--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,18 @@
 server:
   port: 8080
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
-    password: 123
     username: postgres
+    password: 123
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: true;
-        show_sql: true;
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        show_sql: true
     open-in-view: true
